--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "components": "^0.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.0",
     "styled": "^1.0.0",
     "styled-components": "^5.3.6",
